--- a/src/app/components/servicio/nuevo-servicio/nuevo-servicio.component.html
+++ b/src/app/components/servicio/nuevo-servicio/nuevo-servicio.component.html
@@ -1,1 +1,49 @@
-<p>nuevo-servicio works!</p>
+<div class="modal-dialog modal-xl">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Nuevo servicio</h5>
+        </div>
+        <div class="modal-body">
+            <form>
+
+                <div class="row">
+
+                    <div class="form-group">
+                        <label for="cliente">Cliente</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="cliente" readonly name="cliente"
+                                [(ngModel)]="cliente.fullName">
+                            <div class="input-group-append">
+                                <button class="btn btn-secondary" data-bs-toggle="modal"
+                                    data-bs-target="#clienteModal" type="button">Ingresar Datos</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="ficha">Ficha</label>
+                        <select name="ficha" class="form-select" id="ficha" [(ngModel)]="ficha">
+                            <option *ngFor="let ficha of fichas" [ngValue]="ficha">{{ficha.idFichaClinica + "-" +
+                                ficha.motivoConsulta}}</option>
+                        </select>
+                    </div>
+
+                </div>
+
+                <div class="form-group">
+                    <label for="observacion">Observaciones</label>
+                    <textarea type="text" class="form-control" id="observacion" name="observacion"
+                        [(ngModel)]="servicio.observacion"></textarea>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" routerLink="/servicio" data-bs-dismiss="modal">Volver</button>
+            <button type="button" class="btn btn-primary" (click)="crearServicio()">Guardar</button>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="clienteModal" tabindex="-1" aria-hidden="true">
+    <app-buscarcliente (seleccionarClienteEvent)="seleccionarCliente($event)"></app-buscarcliente>
+</div>
