--- a/src/app/components/servicio/agregar-detalle/agregar-detalle.component.html
+++ b/src/app/components/servicio/agregar-detalle/agregar-detalle.component.html
@@ -1,3 +1,71 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
-<p>agregar-detalle works!</p>
+<div class="modal-dialog modal-xl">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Agregar Observaciones</h5>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="row">
+                    <div class="form-group">
+                        <label for="empleado">Empleado</label>
+                        <input type="text" class="form-control" id="empleado" name="empleado" readonly
+                            [(ngModel)]="empleado.nombreCompleto">
+
+                    </div>
+                    <div class="form-group">
+                        <label for="cliente">Cliente</label>
+                        <input type="text" class="form-control" id="cliente" name="cliente" readonly
+                            [(ngModel)]="cliente.nombreCompleto">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group">
+                        <label for="categoria">Categoria</label>
+                        <input type="text" class="form-control" id="categoria" name="categoria" readonly
+                            [(ngModel)]="servicio.idFichaClinica.idTipoProducto.idCategoria.descripcion">
+                    </div>
+                    <div class="form-group">
+                        <label for="subcategoria">Tipo Producto</label>
+                        <input type="text" class="form-control" id="subcategoria" name="subcategoria" readonly
+                            [(ngModel)]="servicio.idFichaClinica.idTipoProducto.descripcion">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group">
+                        <label for="motivoConsulta">Motivo de Consulta</label>
+                        <textarea readonly type="text" class="form-control" id="motivoConsulta" name="motivoConsulta"
+                            [(ngModel)]="servicio.idFichaClinica.motivoConsulta"></textarea>
+                    </div>
+                    <div class="form-group ">
+                        <label for="diagnostico">Diagnostico</label>
+                        <textarea readonly type="textArea" class="form-control" id="diagnostico" name="diagnostico"
+                            [(ngModel)]="servicio.idFichaClinica.diagnostico"></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="observacion">Observaciones</label>
+                    <textarea type="text" class="form-control" id="observacion" name="observacion"
+                        [(ngModel)]="servicio.observacion"></textarea>
+                </div>
+            </form>
+        </div>
+        <div class="form-group">
+            <label for="cantidad">Cantidad</label>
+            <textarea type="text" class="number-input" id="cantidad" name="cantidad" [(ngModel)]="cantidad"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="presentacionProducto">Presentacion Producto</label>
+            <select name="presentacionProducto" class="form-select" id="presentacionProducto"
+                [(ngModel)]="presentacionProducto">
+                <option *ngFor="let presentacionProductoof presentacionProductos" [ngValue]="presentacionProducto">
+                    {{presentacionProducto.idPresentacionProducto}}</option>
+            </select>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" routerLink="/ficha">Volver</button>
+            <button type="button" class="btn btn-primary" (click)="agregarDetalle()">Agregar</button>
+        </div>
+    </div>
+</div>
