creacion de reportes

--- a/src/app/components/reporte/reporte.component.html
+++ b/src/app/components/reporte/reporte.component.html
@@ -1,3 +1,123 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
-<p>reporte works!</p>
+<link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+/>
+
+<div class="row">
+  <form>
+    <div class="row">
+      <div class="form-group" >
+          <label for="empleado">Empleado</label>
+          <div class="input-group">
+              <input type="text" class="form-control" id="empleado" name="empleado" readonly [(ngModel)] = "empleado.fullName"> 
+              <div class="input-group-append">
+                  <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#empleadoModal" type="button">Ingresar datos</button>
+              </div>
+          </div>
+      </div>
+      <div class="form-group">
+          <label for="cliente">Cliente</label>
+          <div class="input-group">
+              <input type="text" class="form-control" id="cliente" readonly name="cliente" [(ngModel)]="cliente.fullName"> 
+              <div class="input-group-append">
+                  <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#clienteModal" type="button" >Ingresar datos</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="row">
+    <div class="form-group">
+      <label for="fechaDesde">Desde</label>
+      <input type="date" class="form-control" id="fechaDesde"  name="fechaDesde" [(ngModel)]="filtros.fechaDesde"> 
+    </div>
+    <div class="form-group">
+      <label for="fechaHasta">Hasta</label>
+      <input type="date" class="form-control" id="fechaHasta"  name="fechaHasta" [(ngModel)]="filtros.fechaHasta"> 
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col-6">
+    <label for="presentacionProducto">Presentacion Producto</label>
+    <select name="presentacionProducto" class="form-select" id="presentacionProducto" [(ngModel)]="presentacionProducto"> 
+        <option *ngFor="let presentacionProducto of presentacionProductos" [ngValue]="presentacionProducto">{{presentacionProducto.nombre}}</option>
+    </select>
+  </div>
+  </div>
+  </form>
+  
+  <div class="row">
+    <div class="col-md-3">
+      <button type="button" class="btn btn-outline-primary mt-2" [disabled]="!filtros.fechaDesde || !filtros.fechaHasta" (click)="generarReporteBasico()">Generar Reporte Basico</button>
+    </div>
+    <div class="col-md-3">
+      <button type="button" class="btn btn-outline-primary mt-2" [disabled]="!filtros.fechaDesde || !filtros.fechaHasta" (click)="generarReporteDetallado()">Generar Reporte Detallado</button>
+    </div>
+  </div>
+  
+  <div [hidden] = "hideBasics" class="table-responsive" label="tablaBasica">
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col" *ngFor="let header of columns" >{{header}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let group of data">
+        <td>{{group.fechaHora.split(" ")[0]}}</td>
+        <td>{{group.idFichaClinica.idEmpleado.nombre + " " + group.idFichaClinica.idEmpleado.apellido }}</td>
+        <td>{{group.idFichaClinica.idCliente.nombre + " " + group.idFichaClinica.idCliente.apellido }}</td>
+        <td>{{group.presupuesto}}</td>
+        <td>{{group.idFichaClinica.idTipoProducto.descripcion}}</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+  
+  <div [hidden] = "hideDetails" class="table-responsive" label="tablaDetallada">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col" *ngFor="let header of columns" >{{header}}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let group of superData">
+          <td>{{group.idServicio.idServicio}}</td>
+          <td>{{group.idServicio.fechaHora.split(" ")[0]}}</td>
+          <td>{{group.idServicio.idFichaClinica.idEmpleado.nombre + " " + group.idServicio.idFichaClinica.idEmpleado.apellido }}</td>
+          <td>{{group.idServicio.idFichaClinica.idCliente.nombre + " " + group.idServicio.idFichaClinica.idCliente.apellido }}</td>
+          <td>{{group.idPresentacionProducto.existenciaProducto.precioVenta}}</td>
+          <td>{{group.cantidad}}</td>
+          <td>{{group.idPresentacionProducto.existenciaProducto.precioVenta*group.cantidad}}</td>
+          <td>{{group.idPresentacionProducto.nombre}}</td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+      
+
+  <div [hidden] = "hideBottom" class="row">
+    <div class="col-md-11 text-end">
+      <button type="button" class="btn btn-secondary mt-2" (click)="descargarCSV()">
+        <i class="bi-filetype-csv text-light"></i>Formato CSV
+      </button>
+    </div>
+    <div class="col-md-1 text-end">
+      <button type="button" class="btn btn-secondary mt-2" (click)="descargarPDF()">
+        <i class="bi-file-pdf text-light"></i>Formato PDF
+      </button>
+    </div>
+
+    
+  </div>
+  
+  <div class="modal fade" id="empleadoModal" tabindex="-1" aria-hidden="true">
+    <app-buscarempleado (seleccionarEmpleadoEvent)="seleccionarEmpleado($event)"></app-buscarempleado>    
+  </div>
+  
+
+  <div class="modal fade" id="clienteModal" tabindex="-1" aria-hidden="true">
+   <app-buscarcliente (seleccionarClienteEvent)="seleccionarCliente($event)"></app-buscarcliente>
+  </div>
