--- a/src/app/components/servicio/agregar-detalle/agregar-detalle.component.html
+++ b/src/app/components/servicio/agregar-detalle/agregar-detalle.component.html
@@ -51,9 +51,9 @@
                 </div>
             </form>
         </div>
-        <div class="form-group">
-            <label for="cantidad">Cantidad</label>
-            <textarea type="text" class="number-input" id="cantidad" name="cantidad" [(ngModel)]="cantidad"></textarea>
+        <div class="form-group m-2">
+            <label for="cantidad" class="m-2">Cantidad</label>
+            <textarea type="text" class="number-input" id="cantidad" name="cantidad" [(ngModel)]="cantidad" style="width: 5%;height: 30px;"></textarea>        
         </div>
         <div class="form-group">
             <label for="presentacionProducto">Presentacion Producto</label>
@@ -64,7 +64,7 @@
             </select>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" routerLink="/ficha">Volver</button>
+            <button type="button" class="btn btn-secondary m-2" routerLink="/ficha">Volver</button>
             <button type="button" class="btn btn-primary" (click)="agregarDetalle()">Agregar</button>
         </div>
     </div>
