--- a/src/app/components/servicio/agregar-detalle/agregar-detalle.component.html
+++ b/src/app/components/servicio/agregar-detalle/agregar-detalle.component.html
@@ -53,14 +53,17 @@
             <label for="cantidad" class="m-2">Cantidad</label>
             <textarea type="text" class="number-input" id="cantidad" name="cantidad" [(ngModel)]="cantidad" style="width: 5%;height: 30px;"></textarea>
         </div>
+
         <div class="form-group">
             <label for="presentacionProducto">Presentacion Producto</label>
             <select name="presentacionProducto" class="form-select" id="presentacionProducto"
                 [(ngModel)]="presentacionProducto">
                 <option *ngFor="let presentacionProducto of presentacionProductos" [ngValue]="presentacionProducto">
-                    {{presentacionProducto.idPresentacionProducto}}</option>
+                    {{presentacionProducto?.nombre}}</option>
             </select>
         </div>
+
+
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary m-2" routerLink="/ficha">Volver</button>
             <button type="button" class="btn btn-primary" (click)="agregarDetalle()">Agregar</button>
