--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,59 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
+      
+      <div class="offcanvas offcanvas-start w-25 bg-dark" tabindex="-1" id="offcanvas" data-bs-keyboard="false" data-bs-backdrop="false">
+        <div class="offcanvas-header">
+            <h6 class="offcanvas-title d-none d-sm-block" id="offcanvas">Menu</h6>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body px-0">
+            <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-start" id="menu">
+                <li class="nav-item">
+                    <a href="/" class="nav-link text-truncate">
+                        <i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline">Inicio</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/ficha" class="nav-link text-truncate">
+                        <i class="fs-5 bi-journal-text"></i><span class="ms-1 d-none d-sm-inline">Fichas</span> </a>
+                </li>
+                <li>
+                    <a href="/reserva" class="nav-link text-truncate">
+                        <i class="fs-5 bi-calendar-check"></i><span class="ms-1 d-none d-sm-inline">Reservas</span></a>
+                </li>
+                <li>
+                    <a href="/servicio" class="nav-link text-truncate">
+                        <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline">Servicios</span></a>
+                </li>
+                <li>
+                    <a href="/reporte" class="nav-link text-truncate">
+                        <i class="fs-5 bi-file-earmark-check"></i><span class="ms-1 d-none d-sm-inline">Reportes</span> </a>
+                </li>
+            </ul>
+            <button (click)="logOut()"class="btn text-danger" type="submit">
+              Cerrar Sesion
+            </button>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col min-vh-100 py-3">
+                <!-- toggler -->
+                <button class="btn float-md-start" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" role="button">
+                    <i class="bi bi-list fs-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvas"></i>
+                </button>
+                <!-- Contenido del codigo -->
+                <body class="mx-auto mt-5">
+                  <router-outlet></router-outlet>
+                </body>
+                  
+              </div>
+        </div>
+    </div>
+
+    <!--
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="router.url != '/login'">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -40,6 +93,8 @@
       </div>
     </div>
   </nav>
+
 <body class="mx-auto mt-5">
 <router-outlet></router-outlet>
 </body>
+-->
